--- a/plot_horn_cuts.Rmd
+++ b/plot_horn_cuts.Rmd
@@ -32,6 +32,11 @@ print(cuta.shape)
 ```
 
 ```{python}
+font = {'family' : 'normal',
+        'weight' : 'normal',
+        'size'   : 22}
+
+plt.rc('font', **font)
 plt.figure(figsize=(16,8))
 plt.plot(cuta[0,:], cuta[1,:], label=r'$\phi$ = 0$^\circ$', linewidth=3)
 plt.plot(cuta[0,:], cuta[3,:], label=r'$\phi$ = 45$^\circ$', linewidth=3)
@@ -41,6 +46,135 @@ plt.legend(loc='upper right')
 plt.grid(True)
 plt.ylabel("Intenisty (dB)")
 plt.xlabel(r'Angle $\theta$ ($^\circ$)')
+plt.title('150 GHz Reference Material')
+```
+
+```{python}
+oldtabnear = np.loadtxt('/home/james/graspfiles/horncuts/spherical_cutnearfieldoldtabsou.cut', skiprows=2, max_rows=241).T
+print(oldtabnear.shape)
+degrange = np.linspace(-90,90,241)
+```
+
+```{python}
+plt.rc('font', **font)
+plt.figure(figsize=(16,8))
+plt.plot(degrange, oldtabnear[0,:], label='co')
+plt.plot(degrange, oldtabnear[1,:], label='cx')
+# plt.plot(degrange, oldtabnear[2,:])
+# plt.plot(degrange, oldtabnear[3,:])
+plt.plot(degrange, oldtabnear[4,:])
+plt.plot(degrange, oldtabnear[5,:])
+plt.plot(degrange, np.abs(oldtabnear[0,:])+np.abs(oldtabnear[1,:])+np.abs(oldtabnear[4,:])+np.abs(oldtabnear[5,:]), label='co+cx')
+plt.plot(degrange, np.abs(oldtabnear[0,:]+oldtabnear[1,:])**2, label='co+cx')
+plt.legend(loc='upper right')
+plt.grid(True)
+#plt.xlim(0,90)
+#plt.yscale('log')
+```
+
+```{python}
+logcut = np.abs(oldtabnear[0,:]) + np.abs(oldtabnear[1,:])
+logcut = 20*np.log10(logcut/4*np.pi)
+
+plt.rc('font', **font)
+plt.figure(figsize=(16,12))
+#plt.plot(degrange, oldtabnear[0,:]+np.abs(oldtabnear[1,:]))
+
+plt.plot(degrange, 20*np.log10(np.abs(oldtabnear[0,:])), label=r'CoX $\theta$', linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(oldtabnear[1,:])), label=r'CxX $\phi$', linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(oldtabnear[2,:])), label=r'CoY $\theta$', linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(oldtabnear[3,:])), label=r'CxY $\phi$',  linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(oldtabnear[4,:])), label='CoPol ',  linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(oldtabnear[5,:])), label='CxPol',  linewidth=3)
+plt.plot(degrange, logcut, label='newcomb', linewidth=3)
+#plt.plot(degrange, 20*np.log10(np.abs(oldtabnear[0,:]+oldtabnear[1,:])/4*np.pi), label='col1and2', linewidth=3)
+plt.xlim(0,90)
+#plt.ylim(max(20*np.log10(np.abs(oldtabnear[1,:])/4*np.pi))-70,max(20*np.log10(np.abs(oldtabnear[1,:])/4*np.pi))+1)
+plt.ylim(max(20*np.log10(np.abs(oldtabnear[1,:])))-70,max(20*np.log10(np.abs(oldtabnear[1,:])))+10)
+
+plt.legend(loc='upper right')
+plt.grid(True)
+plt.ylabel("Intenisty (dB)")
+plt.xlabel(r'Angle $\theta$ ($^\circ$)')
+plt.title('150 GHz Grasp Test')
+#plt.yscale('log')
+```
+
+```{python}
+print(max(20*np.log(np.abs(oldtabnear[0,:])/4*np.pi)))
+logcut = np.log(oldtabnear[0,:]/4*np.pi)
+print(max(logcut))
+print(max(oldtabnear[0,:]), max(oldtabnear[1,:]), max(oldtabnear[2,:]), max(oldtabnear[3,:]), max(oldtabnear[4,:]), max(oldtabnear[5,:]))
+print(max(oldtabnear[0,:])+max(oldtabnear[1,:]))
+```
+
+```{python}
+import math
+#print(math.log(max(oldtabnear[0,:]), 20)/4*3.14)
+print(max( oldtabnear[0,:]))
+print(20*np.log10(max( oldtabnear[0,:]/4*np.pi)))
+#print(max(oldtabnear[0,:]), max(np.log((oldtabnear[0,:]/4*3.14)**20)))
+#print(20 * np.log(max( oldtabnear[0,:]**2/ 4*np.pi )))
+"""renormalise difference"""
+diff = max(cuta[1,:]) - max(logcut)
+# print(max(20*np.log10(np.abs(oldtabnear[1,:])/4*np.pi)), max(cuta[1,:]), diff)
+```
+
+```{python}
+plt.rc('font', **font)
+plt.figure(figsize=(16,8))
+plt.plot(degrange, 20*np.log10(np.abs(oldtabnear[1,:])/4*np.pi), label=r'CoX $\phi$', linewidth=3)
+plt.plot(cuta[0,:], cuta[1,:]-diff, label=r'$\phi$ = 0$^\circ$', linewidth=3)
+plt.plot(degrange, logcut, label='newcomb', linewidth=3)
+plt.xlim(0,90)
+plt.ylim(max(20*np.log10(np.abs(oldtabnear[0,:])/4*np.pi))-70,max(20*np.log10(np.abs(oldtabnear[0,:])/4*np.pi))+1)
+plt.legend(loc='upper right')
+plt.grid(True)
+plt.ylabel("Intenisty (dB)")
+plt.xlabel(r'Angle $\theta$ ($^\circ$)')
+plt.title('150 GHz compare grasp and reference')
+#plt.yscale('log')
+```
+
+```{python}
+"""load neafield gaussian"""
+neargaus = np.loadtxt('/home/james/graspfiles/horncuts/spherical_cut_nearfieldgauss.cut', skiprows=2, max_rows=241).T
+print(oldtabnear.shape)
+degrange = np.linspace(-90,90,241)
+```
+
+```{python}
+plt.rc('font', **font)
+plt.figure(figsize=(16,12))
+#plt.plot(degrange, oldtabnear[0,:]+np.abs(oldtabnear[1,:]))
+
+plt.plot(degrange, 20*np.log10(np.abs(neargaus[0,:])/4*np.pi), label=r'CoX $\theta$', linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(neargaus[1,:])/4*np.pi), label=r'CxX $\phi$', linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(neargaus[2,:])/4*np.pi), label=r'CoY $\theta$', linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(neargaus[3,:])/4*np.pi), label=r'CxY $\phi$',  linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(neargaus[4,:])/4*np.pi), label='CoPol ',  linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(neargaus[5,:])/4*np.pi), label='CxPol',  linewidth=3)
+#plt.plot(degrange, 20*np.log10(np.abs(oldtabnear[0,:]+oldtabnear[1,:])/4*np.pi), label='col1and2', linewidth=3)
+plt.xlim(0,90)
+plt.ylim(max(20*np.log10(np.abs(oldtabnear[0,:])/4*np.pi))-70,max(20*np.log10(np.abs(oldtabnear[0,:])/4*np.pi))+1)
+plt.legend(loc='upper right')
+plt.grid(True)
+plt.ylabel("Intenisty (dB)")
+plt.xlabel(r'Angle $\theta$ ($^\circ$)')
+plt.title('150 GHz Grasp Test Near Field Gaussian')
+```
+
+```{python}
+plt.rc('font', **font)
+plt.figure(figsize=(16,12))
+plt.plot(degrange, 20*np.log10(np.abs(neargaus[0,:])/4*np.pi), label=r'Guass', linewidth=3)
+plt.plot(cuta[0,:], cuta[1,:]-diff, label=r'$\phi$ = 0$^\circ$ from excel', linewidth=3)
+plt.plot(degrange, logcut, label='newcomb', linewidth=3)
+plt.plot(degrange, 20*np.log10(np.abs(oldtabnear[1,:])/4*np.pi), label=r'CoX $\phi$ tabsou from grasp', linewidth=3)
+plt.legend(loc='upper right')
+plt.xlim(0,90)
+plt.ylim(max(20*np.log10(np.abs(oldtabnear[0,:])/4*np.pi))-70,max(20*np.log10(np.abs(oldtabnear[0,:])/4*np.pi))+5)
+
 ```
 
 ```{python}
